--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">HackathonWinnerApp</string>
     <string name="sample_text">Sample text</string>
+    <string name="shared_pref_name">Auth data preferences</string>
     <string name="enter_login">Enter login or email address</string>
     <string name="enter_password">Enter your password</string>
     <string name="enter_name">Enter your name</string>
@@ -8,7 +9,7 @@
     <string name="login_title">Login</string>
     <string name="registration_title">Registration</string>
     <string name="sign_in">Sign in</string>
-    <string name="sign_up">Sigh up</string>
+    <string name="sign_up">Sign up</string>
     <string name="remember_me">Remember me</string>
     <string name="error_wrong_password">Passwords don\'t match</string>
     <string name="is_mentor">I am mentor</string>
