--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="course_full_description">Full description:</string>
     <string name="course_image_url">Image url:</string>
     <string name="course_tags">Tags:</string>
+    <string name="show_only_favorites">Show only favorite</string>
 </resources>
