--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="telegram_channel">Telegram channel link</string>
     <string name="img_url">Image preview link</string>
     <string name="tags">Tags</string>
+    <string name="date_label">Date</string>
 </resources>
