add date picker fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="img_url">Image preview link</string>
     <string name="tags">Tags</string>
     <string name="date_label">Date</string>
+    <string name="date_picker_title">Date of lecture</string>
 </resources>
