--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="tags">Tags</string>
     <string name="date_label">Date</string>
     <string name="date_picker_title">Date of lecture</string>
+    <string name="time_picker">Time of lecture</string>
 </resources>
